# bundlemanager_distributed_bundle_framework

./: BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  dbms.gni
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/include/: distributed_bms_acl_info.h  distributed_bms_interface.h  distributed_bms_proxy.h  distributed_bundle_ipc_interface_code.h  distributed_bundle_mgr_client.h  distributed_bundle_mgr_death_recipient.h  distributed_bundle_mgr_load_callback.h
interfaces/inner_api/src/: distributed_bms_acl_info.cpp  distributed_bms_proxy.cpp  distributed_bundle_mgr_client.cpp  distributed_bundle_mgr_death_recipient.cpp  distributed_bundle_mgr_load_callback.cpp
interfaces/kits/ani/distributed_bundle_manager/: BUILD.gn  ani_distributed_bundle_manager.cpp  ani_distributed_bundle_manager_common.cpp  ani_distributed_bundle_manager_common.h  ani_distributed_bundle_manager_convert.cpp  ani_distributed_bundle_manager_convert.h  ani_distributed_bundle_manager_unsupported.cpp
interfaces/kits/ani/distributed_bundle_manager/ets/: @ohos.bundle.distributedBundleManager.ets
interfaces/kits/ani/distributed_bundle_manager/ets/bundleManager/: RemoteAbilityInfo.ets  RemoteAbilityInfoInner.ets
interfaces/kits/js/distributebundlemgr/: BUILD.gn  distributed_bundle_mgr.cpp
interfaces/kits/js/distributedBundle/: BUILD.gn  distributed_bundle.cpp  distributed_bundle.h  distributed_bundle_unsupported.cpp  distributed_helper.cpp  distributed_helper.h  native_module.cpp
services/dbms/: BUILD.gn
services/dbms/include/: account_manager_helper.h  dbms_device_manager.h  dbms_scope_guard.h  distributed_bms.h  distributed_bms_host.h  distributed_data_storage.h  distributed_monitor.h  image_compress.h
services/dbms/sa_profile/: 402.json  distributedbms.cfg
services/dbms/src/: account_manager_helper.cpp  dbms_device_manager.cpp  distributed_bms.cpp  distributed_bms_host.cpp  distributed_data_storage.cpp  event_report.cpp  image_compress.cpp
services/dbms/test/sceneProject/: BUILD.gn
services/dbms/test/sceneProject/unittest/: BUILD.gn
services/dbms/test/sceneProject/unittest/ohos_test/: BUILD.gn  ohos_test.xml
services/dbms/test/sceneProject/unittest/system_module/: BUILD.gn  build-profile.json5  oh-package.json5
services/dbms/test/sceneProject/unittest/system_module/AppScope/: app.json  app.json5
services/dbms/test/sceneProject/unittest/system_module/entry/src/main/: module.json  module.json5
services/dbms/test/sceneProject/unittest/system_module/entry/src/main/ets/MainAbility/: MainAbility.ts
services/dbms/test/sceneProject/unittest/system_module/entry/src/main/ets/pages/index/: index.ets
services/dbms/test/sceneProject/unittest/system_module/entry/src/main/ets/test/: List.test.ets
services/dbms/test/sceneProject/unittest/system_module/entry/src/main/resources/base/element/: color.json  string.json
services/dbms/test/sceneProject/unittest/system_module/hvigor/: hvigor-config.json5
services/dbms/test/sceneProject/unittest/system_module/signature/: com.query.test.p7b
services/dbms/test/unittest/dbms_services_kit_test/: BUILD.gn  dbms_services_kit_test.cpp  mock_scope_guard.h
services/dbms/test/unittest/distributed_bms_host_test/: BUILD.gn  distributed_bms_host_test.cpp  mock_distributed_bms_interface.cpp  mock_distributed_bms_interface.h
test/fuzztest/: BUILD.gn  dbms_fuzztest_util.h
test/fuzztest/distributedbmshost_fuzzer/: BUILD.gn  distributedbmshost_fuzzer.cpp  distributedbmshost_fuzzer.h
test/fuzztest/distributeddatastorage_fuzzer/: BUILD.gn  distributeddatastorage_fuzzer.cpp  distributeddatastorage_fuzzer.h
