# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("../../../dbms.gni")
module_output_path = fuzz_test_path

##############################fuzztest##########################################
ohos_fuzztest("DistributedBmsHostFuzzTest") {
  include_dirs = [ "${dbms_services_path}/include" ]
  module_out_path = module_output_path
  fuzz_config_file = "../../fuzztest/distributedbmshost_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "${dbms_services_path}/src/distributed_bms_host.cpp" ]
  sources += [ "distributedbmshost_fuzzer.cpp" ]

  deps = [ "${dbms_inner_api_path}:dbms_fwk" ]
  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "bundle_framework:libappexecfwk_common",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}
