# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("../../../dbms.gni")
module_output_path = fuzz_test_path

##############################fuzztest##########################################
ohos_fuzztest("DistributedDataStorageFuzzTest") {
  include_dirs = [
    "//foundation/bundlemanager/distributed_bundle_framework/test/fuzztest",
    "${dbms_services_path}/include",
  ]
  module_out_path = module_output_path
  fuzz_config_file = "../../fuzztest/distributeddatastorage_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${dbms_services_path}/src/account_manager_helper.cpp",
    "${dbms_services_path}/src/dbms_device_manager.cpp",
    "${dbms_services_path}/src/distributed_bms.cpp",
    "${dbms_services_path}/src/distributed_bms_host.cpp",
    "${dbms_services_path}/src/distributed_data_storage.cpp",
  ]
  sources += [ "distributeddatastorage_fuzzer.cpp" ]

  deps = [ "${dbms_inner_api_path}:dbms_fwk" ]
  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "bundle_framework:libappexecfwk_common",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "device_manager:devicemanagersdk",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "i18n:intl_util",
    "init:libbegetutil",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "resource_management:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
