# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../dbms.gni")

ohos_shared_library("distributedbundlemanager") {
  defines = [
    "APP_LOG_TAG = \"DistributedBundleMgrService\"",
    "LOG_DOMAIN = 0xD001120",
  ]
  sources = [ "native_module.cpp" ]
  if (distributed_bundle_framework_enable) {
    sources += [ "distributed_bundle.cpp" ]
  } else {
    sources += [ "distributed_bundle_unsupported.cpp" ]
  }

  configs = [ "${dbms_services_path}:distributed_bms_config" ]

  deps = [ "${dbms_inner_api_path}:dbms_fwk" ]

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "bundle_framework:bundle_napi_common",
    "bundle_framework:libappexecfwk_common",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]
  public_external_deps = [ "bundle_framework:bundle_napi_common" ]
  relative_install_dir = "module/bundle"
  subsystem_name = "bundlemanager"
  part_name = "distributed_bundle_framework"
}

group("jsapi_target") {
  deps = []

  if (support_jsapi && distributed_bundle_framework_graphics) {
    deps += [ ":distributedbundlemanager" ]
  }
}
