# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../../../dbms.gni")

ohos_app("distributed_system_module") {
  certificate_profile = "signature/com.query.test.p7b"
  hap_name = "distributed_system_module"
  hap_out_dir = "$root_out_dir/tests/unittest/distributed_bundle_framework/distributed_bundle_framework/resource/test_bundle"

  subsystem_name = "bundlemanager"
  part_name = "distributed_bundle_framework"

  js_build_mode = "release"
  sdk_home = "//prebuilts/ohos-sdk/linux"
  sdk_type_name = [ "sdk.dir" ]
  assemble_type = "assembleHap"
  build_level = "module"
  build_modules = [ "module01" ]
}
